# odoo-law-firm

./: appspec.yml  bitbucket-pipelines.yml  pyproject.toml
.github/workflows/: deploy.yml
config/: .gitignore  odoo.conf
custom-addons/law_firm_management/: __manifest__.py
custom-addons/law_firm_management/data/: departments.xml  jobs.xml  law_case_data.xml  law_case_sequence.xml  law_practice_area_data.xml  test_cases_data.xml
custom-addons/law_firm_management/models/: __init__.py  hr_employee.py  law_case.py  law_case_deadlines.py  law_case_document.py  law_case_evidence.py  law_case_hearings.py  law_case_milestone.py  law_case_precedent.py  law_case_stage.py  law_case_task.py  law_case_timesheet.py  law_case_witness.py  law_client.py  law_fee_agreement.py  law_legal_topic.py  legal_area.py  res_partner.py
custom-addons/law_firm_management/repositories/: __init__.py  base_repos.py  case_repository.py  lawyer_repository.py  practice_area_repository.py  precedent_repository.py
custom-addons/law_firm_management/security/: groups.xml  ir.model.access.csv  security.xml
custom-addons/law_firm_management/services/: __init__.py  case_event_manager.py  case_state_service.py  case_success_rate_service.py  case_validation_service.py  precedent_analysis_service.py
custom-addons/law_firm_management/views/: hr_employee_view.xml  menu_items.xml  (+6 more)
custom-addons/law_firm_manifest/: __manifest__.py
custom-addons/real_estate_ads/: __manifest__.py
docker/: bitbucket-pipelines.yml  docker-compose.yml
scripts/: after_install.sh  fix_permissions.sh  start_application.sh
(+29 files in other folders)
