[project]
name = "odoo"
version = "0.1.0"
description = ""
authors = [
    {name = "mattedlopez88",email = "matias.lopez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel (>=2.17.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
